# alpr-pipeline

./: .gitignore  LICENSE  README.md
LP_VT_det_rec/: README.md
LP_VT_det_rec/darknet/: README.md  alpr_pipeline.py  detector.py  evaluator.py
LP_VT_det_rec/datasets/: Automold.py  README.md  darknet_dataset_preperations.ipynb  data_generation.ipynb  data_generator.py  dataset_analysis.ipynb  datasets_util.py  datasets_utils.py  v_det_class_name.txt  visualise_dataset.ipynb
LP_VT_det_rec/experiments/: README.md
LP_VT_det_rec/yolov3/: README.md
LP_VT_det_rec/yolov4/: .pylintrc  CHANGELOG  LICENSE.txt  LP_detect_training.ipynb  README.md  setup.cfg  setup.py  testing_inference.py  testing_yolov4.ipynb
LP_VT_det_rec/yolov4/py_src/yolov4/common/: base_class.py  media.py
LP_VT_det_rec/yolov4/py_src/yolov4/model/: backbone.py  neck.py  yolov4.py
LP_VT_det_rec/yolov4/py_src/yolov4/tf/: __init__.py  dataset.py
LP_VT_det_rec/yolov4/saved_model/: README.md
LP_VT_det_rec/yolov4/test/: custom_training_on_colab.ipynb  mAP_test.ipynb  make_edgetpu_tflite.ipynb  object_detection_in_image.ipynb
LP_VT_det_rec/yolov4/test/dataset/: converting_coco_dataset.ipynb  val2017.txt  yolo_load_dataset_test.ipynb
LP_VT_det_rec/yolov4/weights/: README.md
darknet/: README.md  alpr_pipeline.py  detector.py  evaluator.py  run_alpr.py
darknet/saved_data/: README.md
datasets/: Helpers.py  README.md  darknet_dataset_preperations.ipynb  datasets_utils.py
vtc/: README.md  VTC_ResNet_training.py  evaluate_model.ipynb  helper.py
vtc/datasets/: README.md
(+22 files in other folders)
