[metadata]
name = yolov4
url = https://github.com/hhk7734/tensorflow-yolov4
project_urls =
    Documentation = https://github.com/hhk7734/tensorflow-yolov4
    "Source Code" = https://github.com/hhk7734/tensorflow-yolov4

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description = YOLOv4: Optimal Speed and Accuracy of Object Detection
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = tensorflow, yolo, AI, TPU
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development


[options]
package_dir =
    = py_src
packages = find:
zip_safe = False
setup_requires =
    numpy>=1.18.0
    easydict
install_requires =
    numpy>=1.18.0
    easydict

[options.packages.find]
where = py_src